fix: select check remove icon align (#43667)

--- a/components/style/mixins/iconfont.less
+++ b/components/style/mixins/iconfont.less
@@ -1,5 +1,6 @@
 .iconfont-mixin() {
-  display: inline-block;
+  display: inline-flex;
+  align-items: center;
   color: @icon-color;
   font-style: normal;
   line-height: 0;
